force-app/main/default/objects/Trainer_Profile__c/Trainer_Profile__c.object-meta.xml
<CustomObject>
    <label>Trainer Profile</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Trainer Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>