force-app/main/default/objects/Trainer_Profile__c/fields/Default_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate__c</fullName>
    <description>Default Rate field for Fitness Tracker.</description>
    <label>Default Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>