force-app/main/default/objects/Trainer_Profile__c/fields/Default_Session_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Default_Session_Duration_Min__c</fullName>
    <description
  >Default Session Duration Min field for Fitness Tracker.</description>
    <label>Default Session Duration Min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>