force-app/main/default/objects/Trainer_Profile__c/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <description>Specialties field for Fitness Tracker.</description>
    <label>Specialties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>