force-app/main/default/objects/Trainer_Profile__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User field for Fitness Tracker.</description>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>User</relationshipName>
    <required>true</required>
</CustomField>